<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/main_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:editable="false"
        android:paddingBottom="4dip"
        android:text="@string/main_desc" />

    <TextView
        android:id="@+id/beepColourTextView"
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:background="@color/beep_darkgrey"
        android:gravity="center"
        android:padding="15dip"
        android:textColor="@color/beep_white"
        android:textSize="18pt" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:padding="4dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:padding="5dip"
            android:text="@string/beep_length" />

        <SeekBar
            android:id="@+id/beepLengthSeekBar"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:max="10"
            android:progress="@string/default_beeplen" />

        <TextView
            android:id="@+id/beepLengthTextView"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:editable="false"
            android:text="@string/clear" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_off_beep"
            />

        <ToggleButton
            android:id="@+id/toggleBeepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/clear" />
        
        <Button
            android:id="@+id/testBeepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testBeepBtn_str" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/clear" />
        
        

        <CheckBox
            android:id="@+id/armed_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/armed_for_foil" />
        
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="10dp"
            android:editable="false"
            android:text="@string/clear" />
        
</LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <Button
            android:id="@+id/testIoioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/testIoioBtn_str" />

         <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/clear" />
        
        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0"
            android:background="@color/beep_white" >
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/beep_darkgrey" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weapon_pin_text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/weapon_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="@string/weapon_pin" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/beep_darkgrey" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/jacket_pin"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/lame_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="@string/lame_pin" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="@string/clear" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="W:"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/isOn_weapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/button_onoff_indicator_off" />

        <ImageView
            android:id="@+id/isOn_lame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/button_onoff_indicator_off" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":L"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</LinearLayout>